2011-12-21  Martin Hoeller <martin.hoeller@xss.co.at>

    Patch 3447161 by Ulrich Voigt/Martin Hoeller:
    * org/jfree/chart/plot/CombinedDomainXYPlot.java:
    (panRangeAxes): new method;
    * org/jfree/chart/plot/CombinedRangeXYPlot.java
    (panDomainAxes): new method;

2011-12-16  Martin Hoeller <martin.hoeller@xss.co.at>

    Add support to hide minor gridlines for PolarPlot:
    * org/jfree/chart/plot/PolarPlot.java
    (radiusMinorGridlinesVisible): New field,
    (isRadiusMinorGridlinesVisible): New method,
    (setRadiusMinorGridlinesVisible): Likewise,
    (buildRadialTicks): Likewise,
    (drawGridlines): Updated to support new flag;

2011-11-12  Martin Hoeller <martin.hoeller@xss.co.at>

    Improvements to axis and plot editors:
    * org/jfree/chart/editor/DefaultValueAxisEditor.java: New file;
    * org/jfree/chart/editor/DefaultLogAxisEditor.java: New file;
    * org/jfree/chart/editor/DefaultPolarPlotEditor.java: New file;
    * org/jfree/chart/editor/DefaultChartEditor.java:
    (constructor): added support for DefaultPolarPlotEditor;
    * org/jfree/chart/editor/DefaultAxisEditor.java
    (constructor): added support for DefaultLogAxisEditor;
    * org/jfree/chart/editor/DefaultNumberAxisEditor.java: refactoring;
    * org/jfree/chart/editor/DefaultPlotEditor.java
    (createPlotPanel): new method,
    (createPlotTabs): new method;
    * org/jfree/chart/editor/LocalizationBundle_ru.properties: addition
    * org/jfree/chart/editor/LocalizationBundle_pt_PT.properties: addition
    * org/jfree/chart/editor/LocalizationBundle_de.properties: addition
    * org/jfree/chart/editor/LocalizationBundle_zh_CN.properties: addition
    * org/jfree/chart/editor/LocalizationBundle_pt_BR.properties: addition
    * org/jfree/chart/editor/LocalizationBundle_es.properties: addition
    * org/jfree/chart/editor/LocalizationBundle_fr.properties: addition
    * org/jfree/chart/editor/LocalizationBundle_nl.properties: addition