@@ -1,3 +1,9 @@
+2012-01-08  David Gilbert <david.gilbert@object-refinery.com>
+
+    Patch 3463807 by Sebastiao Correia
+    * swt/org/jfree/experimental/chart/swt/ChartComposite.java
+    (dispose): Dispose the popup if not null.
+
 2011-12-21  Martin Hoeller <martin.hoeller@xss.co.at>
 
     Patch 3447161 by Ulrich Voigt/Martin Hoeller:
